--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
     <header>
       <div class="container header-content">
-         <div  class="header-title ">NBU-Proect SRL</div>
+         <div  class="header-title">NBU-Proect SRL</div>
          <div class="header-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Magnam, ratione!</div>
          <div>
-           <button type="button" class="btn btn-danger">Oфримати консультацию</button>
+           <button type="button" class="btn btn-danger ">Oфримати консультацию</button>
          </div>
       </div>
     </header>
@@ -59,7 +59,7 @@
          <div class="advantages__header header-block">
             <h2 class="header-block__title" id="about">О Нас</h2>
             <div class="header-block__sub-title">
-               Proiecte de mobilă unică cu o garanție de 2 ani <br> Soluții individuale de design și control sistematic al calității
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, excepturi. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil, voluptatum omnis obcaecati dolores ut.
             </div>
          </div>
          <div class="advantages__body">
@@ -124,7 +124,7 @@
             </div>
             <div class="card-info">
                <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, quidem beatae. Fugit dicta, voluptatibus vero impedit necessitatibus consectetur nemo fuga!</div>
+               <div class="caard-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia expedita ducimus veritatis. Ad, explicabo qui optio voluptas deleniti non in, sit sed numquam pariatur inventore voluptatum aliquam fugit assumenda facere, quo deserunt nihil eos suscipit!</div>
                <<button type="button" class="btn btn-danger">Подробнее</button>
             </div>
          </div>
@@ -132,7 +132,7 @@
          <div class="cards">
             <div class="card-info">
                <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium veniam suscipit odio est! Et obcaecati sequi nisi eveniet voluptas?</div>
+               <div class="caard-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolores minima illo illum officiis nesciunt voluptate eos, id dignissimos, aspernatur reiciendis nemo architecto numquam modi enim sed beatae. Labore vero veritatis harum, voluptas iusto maxime.</div>
                <button type="button" class="btn btn-danger">Подробнее</button>
             </div>
             <div class="card-image">
@@ -146,7 +146,7 @@
             </div>
             <div class="card-info">
                <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, quidem beatae. Fugit dicta, voluptatibus vero impedit necessitatibus consectetur nemo fuga!</div>
+               <div class="caard-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque voluptates error nisi repellendus quae pariatur provident fugit accusantium minus placeat mollitia ducimus, in sit quam ex numquam nam, vero modi fuga alias expedita aliquid iste.</div>
                <button type="button" class="btn btn-danger">Подробнее</button>
             </div>
          </div>
@@ -154,7 +154,7 @@
          <div class="cards">
             <div class="card-info">
                <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium veniam suscipit odio est! Et obcaecati sequi nisi eveniet voluptas?</div>
+               <div class="caard-subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum tenetur velit ab dolore earum minima amet nihil doloribus aut. Neque quisquam fuga obcaecati, omnis consequatur necessitatibus aut labore nihil quasi magni atque ab rem possimus!</div>
                <button type="button" class="btn btn-danger">Подробнее</button>
             </div>
             <div class="card-image">
