--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <header>
       <div class="container header-content">
          <div  class="header-title">NBU-Proect SRL</div>
-         <div class="header-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Magnam, ratione!</div>
+         <div class="header-subtitle">Проектирование освещения, силових установок, вентиляции и пожарной безопасности
+         </div>
          <div>
-           <button type="button" class="btn btn-danger ">Oфримати консультацию</button>
+           <button type="button" class="btn btn-danger ">Оформить консультацию</button>
          </div>
       </div>
     </header>
@@ -59,7 +60,7 @@
          <div class="advantages__header header-block">
             <h2 class="header-block__title" id="about">О Нас</h2>
             <div class="header-block__sub-title">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, excepturi. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil, voluptatum omnis obcaecati dolores ut.
+               Проектирование освещения, силових установок, вентиляции и пожарной безопасности.
             </div>
          </div>
          <div class="advantages__body">
@@ -68,8 +69,8 @@
                   <div class="advantages__icon">
                      <img src="./img/img/01.svg" alt="Consumer Products">
                   </div>
-                  <div data-digits-counter class="advantages__value">200 +</div>
-                  <div class="advantages__text">angajați creativi </div>
+                  <div data-digits-counter class="advantages__value">200</div>
+                  <div class="advantages__text">Творческие сотрудники</div>
                </div>
             </div>
             <div class="advantages__column">
@@ -78,7 +79,7 @@
                      <img src="./img/img/02.svg" alt="Financial Services">
                   </div>
                   <div data-digits-counter class="advantages__value">20</div>
-                  <div class="advantages__text">ani experiență</div>
+                  <div class="advantages__text">Годы опыта</div>
                </div>
             </div>
             <div class="advantages__column">
@@ -87,7 +88,7 @@
                      <img src="./img/img/03.svg" alt="Environmental">
                   </div>
                   <div data-digits-counter class="advantages__value">2</div>
-                  <div class="advantages__text">ani garanție</div>
+                  <div class="advantages__text">Лет гарантии</div>
                </div>
             </div>
             <div class="advantages__column">
@@ -95,8 +96,8 @@
                   <div class="advantages__icon">
                      <img src="./img/img/04.svg" alt="Business & Finance">
                   </div>
-                  <div data-digits-counter class="advantages__value">4000 +</div>
-                  <div class="advantages__text">proiecte realizate</div>
+                  <div data-digits-counter class="advantages__value">4000</div>
+                  <div class="advantages__text">Завершенные проекты</div>
                </div>
             </div>
          </div>
@@ -123,42 +124,42 @@
                <img class="card-img" src="./img/img/ser1.png" alt="">
             </div>
             <div class="card-info">
-               <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia expedita ducimus veritatis. Ad, explicabo qui optio voluptas deleniti non in, sit sed numquam pariatur inventore voluptatum aliquam fugit assumenda facere, quo deserunt nihil eos suscipit!</div>
+               <div class="card-title">Освещение</div>
+               <div class="caard-subtitle">Проектирование освещения для торговых, офисных, промышленных объектов и т.д.</div>
                <<button type="button" class="btn btn-danger">Подробнее</button>
             </div>
          </div>
 
          <div class="cards">
             <div class="card-info">
-               <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolores minima illo illum officiis nesciunt voluptate eos, id dignissimos, aspernatur reiciendis nemo architecto numquam modi enim sed beatae. Labore vero veritatis harum, voluptas iusto maxime.</div>
+               <div class="card-title">Системы электроснабжения</div>
+               <div class="caard-subtitle">Проектирование систем силовых установок включая двигатель, компьютеров, бытовых розеток и т.д.</div>
                <button type="button" class="btn btn-danger">Подробнее</button>
             </div>
             <div class="card-image">
-               <img class="card-img" src="./img/img/ser1.png" alt="">
+               <img class="card-img" src="./img/img/ser2.png" alt="">
             </div>
          </div>
 
          <div class="cards">
             <div class="card-image">
-               <img class="card-img" src="./img/img/ser1.png" alt="">
+               <img class="card-img" src="./img/img/ser4.png" alt="">
             </div>
             <div class="card-info">
-               <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque voluptates error nisi repellendus quae pariatur provident fugit accusantium minus placeat mollitia ducimus, in sit quam ex numquam nam, vero modi fuga alias expedita aliquid iste.</div>
+               <div class="card-title">Вентиляция</div>
+               <div class="caard-subtitle">Проектирование вентустановок, калориферов, вентиляторов, кондиционеров и т.д.</div>
                <button type="button" class="btn btn-danger">Подробнее</button>
             </div>
          </div>
 
          <div class="cards">
             <div class="card-info">
-               <div class="card-title">Lorem ipsum dolor sit.</div>
-               <div class="caard-subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum tenetur velit ab dolore earum minima amet nihil doloribus aut. Neque quisquam fuga obcaecati, omnis consequatur necessitatibus aut labore nihil quasi magni atque ab rem possimus!</div>
+               <div class="card-title">Автоматика и пожарное безопасности</div>
+               <div class="caard-subtitle">Проектирование автоматики зданий в стиле (умный дом) и обеспечение пожарной безопасности.</div>
                <button type="button" class="btn btn-danger">Подробнее</button>
             </div>
             <div class="card-image">
-               <img class="card-img" src="./img/img/ser1.png" alt="">
+               <img class="card-img" src="./img/img/ser5.png" alt="">
             </div>
          </div>
 
